force-app/main/default/objects/API_Callout_Log__c/API_Callout_Log__c.object-meta.xml
<CustomObject>
    <label>API Callout Log</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>API Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Callout Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>