force-app/main/default/objects/API_Callout_Log__c/fields/Context_User__c.field-meta.xml
<CustomField>
    <fullName>Context_User__c</fullName>
    <description>To capture context user, i.e. UserInfo.getUserId() + UserInfo.getUserName()</description>
    <label>Context User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>