force-app/main/default/objects/API_Callout_Log__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <description>The record/s ids for this request derived the data from</description>
    <label>Data Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>