force-app/main/default/objects/API_Callout_Log__c/fields/Xpedeon_Sync_Delegate__c.field-meta.xml
<CustomField>
    <fullName>Xpedeon_Sync_Delegate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Xpedeon Sync Delegate</label>
    <referenceTo>Xpedeon_Sync_Delegate__c</referenceTo>
    <relationshipLabel>API Callout Log</relationshipLabel>
    <relationshipName>API_Callout_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>