force-app/main/default/objects/API_Callout_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Log__c</columns>
    <columns>Data_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>